# api-fastapi

./: Dockerfile  LICENSE.md  README.md  docker-compose.yml  init-mongo.js  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/core/: models.py  schemas.py  services.py
app/repositories/: client_portfolio_repository.py
app/tests/: test_client_portfolio.py  test_main.py
