[tool.poetry]
name = "api-fastapi"
version = "0.1.0"
description = ""
authors = ["Danny Rivadeneira <dianjmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
motor = "^3.5.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
